# nocion

./: Cargo.toml  README.md  base.rs
src/: .env  base.rs  body.rs  lib.rs  utils.rs
tests/: notion_test.rs
